# hello-api

./: .gitignore  ARCHITECTURE.md  BUILD.bazel  CONTRIBUTE.md  Makefile  Procfile  README.md  WORKSPACE  app.yml  cover.html  faas.go  go.mod  main.go
.github/disabled_workflows/: ch2-pipeline.yml  ch4-pipeline.yml  ch5-pipeline.yml  ch6-pipeline.yml  ch7-pipeline.yml  ch8-pipeline.yml  ch9-pipeline.yml  javascript.yml  kotlin.yml
.github/workflows/: c2.yml  c3.yml  ch1-pipeline.yml  ch2-pipeline.yml  ch3-pipeline.yml  ch4-pipeline.yml  ch5-pipeline.yml  ch6-pipeline.yml  ch7-pipeline-temp-update.yml  ch7-pipeline.yml  ch9-pipeline.yml  ci.yml  javascript.yml  kotlin.yml  (+2 more)
ch10/: Makefile  cluster.sh  docker-compose.yml  go.mod  go.sum
ch2/: BUILD.bazel  main.go
ch3/: BUILD.bazel  Makefile  config.json  go.mod  main.go
ch3/cmd/: main.go
ch3/handlers/rest/: translate.go  translate_test.go
ch3/translation/: translator.go  translator_test.go
ch4/: go.mod
ch5/: Makefile  faas.go
ch6/: go.mod
ch7/: Dockerfile  app.yaml  faas.go
ch8/: .golangci.yml
ch9/: config.json  faas.go  go.mod  go.sum
handlers/: health.go  info.go
javascript/: .eslintrc.json  Dockerfile  app.js  app.test.js  jest.config.js  package-lock.json  package.json
kotlin/: Makefile  README.md  pom.xml
old/: Makefile  Procfile  faas.go
python/: .gitignore  Dockerfile  NOTES.md  noxfile.py
python/hello-api/: pyproject.toml
python/hello-api/hello_api/: app.py  deps.py  redis.py  repo.py
python/hello-api/tests/: test_hello_api.py
translation/: translator.go  translator_test.go
(+72 files in other folders)
