load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "ch3_lib",
    srcs = ["main.go"],
    importpath = "github.com/holmes89/hello-api/ch3",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "ch3",
    embed = [":ch3_lib"],
    static = "on",
    visibility = ["//visibility:public"],
)
