[tool.poetry]
name = "hello-api"
version = "0.1.0"
description = ""
authors = ["Joel Holmes <holmes89@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.81.0"
uvicorn = "^0.18.3"
redis = "^4.3.4"
redislite = "^6.2.805324"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"